<resources>
    <string name="app_name">Hot or Not</string>
    <string name="current_weather">Current Weather</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="temperature_holder">%d°</string>
    <string name="temp_amplitude_holder">%1$d° - %2$d°</string>
    <string name="history">History</string>
    <string name="percentage_placeholder">%d %%</string>
    <string name="m_per_s_placeholder">%d m/s</string>
    <string name="details">Details</string>
    <string name="overall">Overall</string>
</resources>
